--- a/res/output.tex
+++ b/res/output.tex
@@ -9,8 +9,8 @@
 \maketitle
 
 \flushleft{\textbf{\large{Исходная функция :}}}
-\center{\fbox{$f(x) = \arccos{}\left(\sin{}\left(x\right)\right)$}}\\[1cm]
-\flushleft{\textbf{\large{Производная исходной функции :}}}\\[2mm]\center{\fbox{$f'(x) = \left(-\frac{\cos{}\left(x\right)}{\sqrt{\left(1{}-{}\left(\sin{}\left(x\right)\right)^{2}\right)}}\right)$}}
+\center{\fbox{$f(x) = \arcsin{}\left(\log_{\cos{}\left(x\right)}{\left(x^{3}\right)}\right){}-{}\ctg{}\left(\frac{\sin{}\left(x\right)}{\cos{}\left(x\right)}\right)$}}\\[1cm]
+\flushleft{\textbf{\large{Производная исходной функции :}}}\\[2mm]\center{\fbox{$f'(x) = \frac{\frac{\left(\frac{x^{3}{}\cdot{}3{}\cdot{}\frac{1{}}{x}}{x^{3}}{}\cdot{}\ln \left(\cos{}\left(x\right)\right){}-{}\ln \left(x^{3}\right){}\cdot{}\frac{\left(-\sin{}\left(x\right)\right)}{\cos{}\left(x\right)}\right)}{\left(\ln \left(\cos{}\left(x\right)\right)\right)^{2}}}{\sqrt{\left(1{}-{}\left(\log_{\cos{}\left(x\right)}{\left(x^{3}\right)}\right)^{2}\right)}}{}-{}\left(-\frac{\frac{\left(\cos{}\left(x\right){}\cdot{}\cos{}\left(x\right){}-{}\sin{}\left(x\right){}\cdot{}\left(-\sin{}\left(x\right)\right)\right)}{\left(\cos{}\left(x\right)\right)^{2}}}{\left(\sin{}\left(\frac{\sin{}\left(x\right)}{\cos{}\left(x\right)}\right)\right)^{2}}\right)$}}
 
 
 \end{document}
